@@ -1,6 +1,6 @@
-$NetBSD: distinfo,v 1.8 2018/05/31 00:56:33 wen Exp $
+$NetBSD: distinfo,v 1.9 2019/07/31 18:05:13 brook Exp $
 
-SHA1 (R/DAAG_1.22.tar.gz) = 996b2958adc1f870895d1c16c3237c7bbf5a2379
-RMD160 (R/DAAG_1.22.tar.gz) = 4d476ab645b1aa771e72b84375694df258cdcb7c
-SHA512 (R/DAAG_1.22.tar.gz) = 12ba0967dd7def94f2822d97c771dde032f168eaa77a4c6134bf8aedbd875010419f450acd05a93aa8ccc12e22c210d5781d49cb985911634abace6b10f525b5
-Size (R/DAAG_1.22.tar.gz) = 1431508 bytes
+SHA1 (R/DAAG_1.22.1.tar.gz) = ba6017f870cb4860cbb281bfb0f9158619149d8c
+RMD160 (R/DAAG_1.22.1.tar.gz) = 7bf68aeb4f747763b65165f20e646fae4032f1fa
+SHA512 (R/DAAG_1.22.1.tar.gz) = 3ed7636683a6219348353abb0b2f43b5562d218c23b3274e4a733127cc8075859b4677473322f6cd7bb3c0d4458b80a0fdf170161340c55ab2d0ddd63b08b566
+Size (R/DAAG_1.22.1.tar.gz) = 1414321 bytes
